# ElasticDeformation

./: CMakeLists.txt  README.md
src/: main.cpp
src/energy/: arap.cpp  arap.hpp  energy.cpp  energy.hpp  snh.cpp  snh.hpp
src/integrator/: BDF1.cpp  BDF1.hpp  BDF2.cpp  BDF2.hpp  Static.cpp  Static.hpp  integrator.cpp  integrator.hpp
src/mesh/: mesh.cpp  mesh.hpp  tetmesh.cpp  tetmesh.hpp
src/utils/: EigenTypes.hpp  IOutils.cpp  IOutils.hpp  matrixUtils.cpp  matrixUtils.hpp
